--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "splash",
   "private": true,
   "dependencies": {
-    "bulma": "^0.0.14"
+    "bulma": "^0.0.14",
+    "slick-carousel": "^1.5.9"
   },
   "devDependencies": {
     "chai": "~3.4.2",
