--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.0.14",
-    "slick-carousel": "^1.5.9"
+    "slick-carousel": "^1.5.9",
+    "covervid": "*"
   },
   "devDependencies": {
     "chai": "~3.4.2",
@@ -13,6 +14,11 @@
     "bulma": {
       "main": [
         "./css/bulma.css"
+      ]
+    },
+    "slick-carousel": {
+      "main": [
+        "./slick/slick.js"
       ]
     }
   }
