--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,11 @@
   "dependencies": {
     "bulma": "^0.0.15",
     "slick-carousel": "^1.5.9",
-    "covervid": "*",
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "covervid": "*"
   },
   "devDependencies": {
-    "chai": "~3.4.2",
-    "mocha": "~2.3.4"
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   },
   "overrides": {
     "bulma": {
@@ -22,6 +20,9 @@
       "main": [
         "./slick/slick.js"
       ]
+    },
+    "jquery": {
+      "main": []
     }
   }
 }
