--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rev": "^6.0.1",
+    "gulp-rev-all": "^0.8.24",
     "gulp-rev-replace": "^0.4.3",
+    "gulp-s3-index": "0.0.2",
     "gulp-sass": "^2.0.0",
+    "gulp-sftp": "^0.1.5",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
+    "run-sequence": "^1.1.5",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
